rootcopy/iptables/iptables.rules
# Generated by hand...
*nat
:PREROUTING ACCEPT [276442:32732341]
:INPUT ACCEPT [30:1922]
:OUTPUT ACCEPT [19142:1284560]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -j MASQUERADE
COMMIT
#
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3395:623601]
:logdrop - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j logdrop
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 25/min -j ACCEPT
# -A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j logdrop
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -o eth0 -j ACCEPT
-A logdrop -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "[iptables] "
-A logdrop -j DROP
COMMIT
# Completed for Archlinux Arm on Rpi.
